--- a/index.html
+++ b/index.html
@@ -9,25 +9,95 @@
 	</head>
 	<body class="is-preload">
 		<div id="wrapper" class="divided">
+			<!-- about -->
 			<section
-				class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right"
+				class="banner onload-image-fade-in onload-content-fade-right color8 style3 fullscreen orient-right content-align-left image-position-center"
 			>
-				<div class="content">
-					<h1>임근웅</h1>
-					<p class="major">
-						A (modular, highly tweakable) responsive one-page template designed by
-						<a href="https://html5up.net">HTML5 UP</a> and released for free under the
-						<a href="https://html5up.net/license">Creative Commons</a>.
-					</p>
-					<ul class="actions stacked">
-						<li><a href="#first" class="button big wide smooth-scroll-middle">Get Started</a></li>
-					</ul>
+				<p
+					class="content"
+					style="position: absolute; top: 100px;  font-size: 200px; font-weight: 700; opacity: 0.05; font-family: 'Playfair Display', Georgia, serif;"
+				>
+				About	
+				</p>
+				<div class="content" style="line-height: 2.5em">
+					<div>
+						<span style="font-family:serif">열정적인 개발자</span>	
+						<h1><strong style="font-family: cursive">임근웅</strong></h1>
+
+						안녕하세요! 신입 개발자 임근웅입니다.
+						<br />
+						저는 열심히 배우고 성장하려는 의지와 열정을 가지고 있습니다.
+						<br />
+						새로운 기술과 개발 방법에 대한 열정과 관심으로 열심히 학습하고,
+						<br />
+						경험을 쌓아 나가며, 좋은 개발로 성장하겠습니다.
+						<br />
+					</div>
+					
 				</div>
 				<div class="image">
 					<img src="images/banner.jpg" alt="" />
 				</div>
 			</section>
 
+			<!-- skills -->
+			<section class="wrapper style1 align-center">
+				<p
+					class="content"
+					style="position: absolute; left: 50%; transform:translateX(-50%); font-size: 200px; font-weight: 700; opacity: 0.05; font-family: 'Playfair Display', Georgia, serif;"
+				>
+				Services	
+				</p>
+				<div class="inner">
+					<div class="skills" style="margin-right:auto; margin-left:auto; padding-left: 15px; padding-right: 15px">
+						<div class="skillLeft">
+							<div class="skillContents">
+								<div class="skillIntro">
+									<span>MY SERVICES</span>
+									<h2>Here Are Some of My Skills</h2>
+								</div>
+							</div>	
+							<div class="skillContents">
+								<div class="lists-01">
+									<div class="001">
+										<h3>1 - Backend</h3>
+										<ul>
+											<li>Java</li>
+											<li>Spring Boot</li>
+											<li>JPA</li>
+											<li>Gradle</li>
+											<li>IntelliJ</li>
+											<li>Visual Studio Code</li>
+											<li>Git</li>
+										</ul>
+									</div>
+									<div class="002">
+										<h3>3 - Frontend</h3>
+										<ul>
+											<li>HTML</li>
+											<li>CSS</li>
+											<li>JS</li>
+										</ul>
+									</div>
+								</div>
+								<div class="lists-02">
+									<div class="001">
+										<h3>2 - Devops</h3>
+										<ul>
+											<li>MySQL</li>
+											<li>MariaDB</li>
+										</ul>
+									</div>
+									<div class="002">
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="skillRight" style="background-image: url(images/skill.jpg);">
+						</div>
+					</div>
+				</div>
+			</section>
 			<!-- Two -->
 			<section
 				class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in"
@@ -245,115 +315,7 @@
 				</div>
 			</section>
 
-			<!-- Six -->
-			<section class="wrapper style1 align-center">
-				<div class="inner">
-					<h2>Ipsum sed consequat</h2>
-					<p>
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel
-						massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium
-						massa et, hendrerit vestibulum odio lorem ipsum.
-					</p>
-					<div class="items style1 medium onscroll-fade-in">
-						<section>
-							<span class="icon style2 major fa-gem"></span>
-							<h3>Lorem</h3>
-							<p>
-								Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam
-								congue semper. Etiam eget ultrices risus nec tempor elit.
-							</p>
-						</section>
-						<section>
-							<span class="icon solid style2 major fa-save"></span>
-							<h3>Ipsum</h3>
-							<p>
-								Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam
-								congue semper. Etiam eget ultrices risus nec tempor elit.
-							</p>
-						</section>
-						<section>
-							<span class="icon solid style2 major fa-chart-bar"></span>
-							<h3>Dolor</h3>
-							<p>
-								Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam
-								congue semper. Etiam eget ultrices risus nec tempor elit.
-							</p>
-						</section>
-						<section>
-							<span class="icon solid style2 major fa-wifi"></span>
-							<h3>Amet</h3>
-							<p>
-								Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam
-								congue semper. Etiam eget ultrices risus nec tempor elit.
-							</p>
-						</section>
-						<section>
-							<span class="icon solid style2 major fa-cog"></span>
-							<h3>Magna</h3>
-							<p>
-								Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam
-								congue semper. Etiam eget ultrices risus nec tempor elit.
-							</p>
-						</section>
-						<section>
-							<span class="icon style2 major fa-paper-plane"></span>
-							<h3>Tempus</h3>
-							<p>
-								Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam
-								congue semper. Etiam eget ultrices risus nec tempor elit.
-							</p>
-						</section>
-						<section>
-							<span class="icon solid style2 major fa-desktop"></span>
-							<h3>Aliquam</h3>
-							<p>
-								Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam
-								congue semper. Etiam eget ultrices risus nec tempor elit.
-							</p>
-						</section>
-						<section>
-							<span class="icon solid style2 major fa-sync-alt"></span>
-							<h3>Elit</h3>
-							<p>
-								Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam
-								congue semper. Etiam eget ultrices risus nec tempor elit.
-							</p>
-						</section>
-						<section>
-							<span class="icon solid style2 major fa-hashtag"></span>
-							<h3>Morbi</h3>
-							<p>
-								Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam
-								congue semper. Etiam eget ultrices risus nec tempor elit.
-							</p>
-						</section>
-						<section>
-							<span class="icon solid style2 major fa-bolt"></span>
-							<h3>Turpis</h3>
-							<p>
-								Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam
-								congue semper. Etiam eget ultrices risus nec tempor elit.
-							</p>
-						</section>
-						<section>
-							<span class="icon solid style2 major fa-envelope"></span>
-							<h3>Ultrices</h3>
-							<p>
-								Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam
-								congue semper. Etiam eget ultrices risus nec tempor elit.
-							</p>
-						</section>
-						<section>
-							<span class="icon solid style2 major fa-leaf"></span>
-							<h3>Risus</h3>
-							<p>
-								Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam
-								congue semper. Etiam eget ultrices risus nec tempor elit.
-							</p>
-						</section>
-					</div>
-				</div>
-			</section>
+			
 
 			<!-- Seven -->
 			<section class="wrapper style1 align-center">
@@ -381,30 +343,6 @@
 				</div>
 			</section>
 
-			<!-- Footer -->
-			<footer class="wrapper style1 align-center">
-				<div class="inner">
-					<ul class="icons">
-						<li>
-							<a href="#" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a>
-						</li>
-						<li>
-							<a href="#" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a>
-						</li>
-						<li>
-							<a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a>
-						</li>
-						<li>
-							<a href="#" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a>
-						</li>
-						<li>
-							<a href="#" class="icon style2 fa-envelope"><span class="label">Email</span></a>
-						</li>
-					</ul>
-					<p>&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
-				</div>
-			</footer>
-		</div>
 
 		<!-- Scripts -->
 		<script src="assets/js/jquery.min.js"></script>
