--- a/index.html
+++ b/index.html
@@ -5,17 +5,45 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
+		<div class="navigation">
+			<ul>
+				<li class="naviList">
+					<a href="#about">
+						<span class="naviIcon"><i class="fa-solid fa-user"></i></span>
+						<span class="naviTitle">About</span>
+					</a>
+				</li>
+				<li class="naviList">
+					<a href="#skills">
+						<span class="naviIcon"><i class="fa-solid fa-screwdriver-wrench"></i></span>
+						<span class="naviTitle">Skills</span>
+					</a>
+				</li>
+				<li class="naviList">
+					<a href="#project">
+						<span class="naviIcon"><i class="fa-solid fa-file-pen"></i></span>
+						<span class="naviTitle">Project</span>
+					</a>
+				</li>
+				<li class="naviList">
+					<a href="#contact">
+						<span class="naviIcon"><i class="fa-solid fa-address-card"></i></span>
+						<span class="naviTitle">Contact</span>
+					</a>
+				</li>
+			</ul>
+		</div>
 		<div id="wrapper" class="divided">
 			<!-- about -->
-			<section
+			<section id="about"
 				class="banner onload-image-fade-in onload-content-fade-right color8 style3 fullscreen orient-right content-align-left image-position-center"
 			>
 				<p
-					class="content"
-					style="position: absolute; top: 100px;  font-size: 200px; font-weight: 700; opacity: 0.05; font-family: 'Playfair Display', Georgia, serif;"
+					class="content waterMark"
 				>
 				About	
 				</p>
@@ -41,11 +69,10 @@
 			</section>
 
 			<!-- skills -->
-			<section class="wrapper style1 align-center">
+			<section id="skills" class="wrapper style1 align-center">
 				<p
-					class="content"
-					style="position: absolute; left: 50%; transform:translateX(-50%); font-size: 200px; font-weight: 700; opacity: 0.05; font-family: 'Playfair Display', Georgia, serif;"
-				>
+					class="content waterMarkSkill	"
+					>
 				Services	
 				</p>
 				<div class="inner">
@@ -101,7 +128,7 @@
 			<!-- project 급똥앤젤-->
 			<section
 				class="spotlight style1 color8 orient-right content-align-left image-position-center onscroll-image-fade-in"
-				id="first"
+				id="project"
 			>
 			
 				<div class="content" >			
@@ -455,10 +482,9 @@
 			
 
 			<!-- Seven -->
-			<section class="wrapper style1 align-center">
+			<section id="contact" class="wrapper style1 align-center">
 				<p
-					class="content"
-					style="position: absolute; left: 50%; transform:translateX(-50%); font-size: 200px; font-weight: 700; opacity: 0.05; font-family: 'Playfair Display', Georgia, serif;"
+					class="content waterMarkSkill"
 				>
 				Contact	
 				</p>
