--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 								>
 									<div class="display-t">
 										<div class="work-name">
-											<h2>Angels</h2>
+											<h2>Toilet Finder</h2>
 										</div>
 									</div>
 								</a>
@@ -218,43 +218,16 @@
 								>
 									<div class="display-t">
 										<div class="work-name">
-											<h2>Coordinates</h2>
+											<h2>Social Midea Service</h2>
 										</div>
 									</div>
 								</a>
 								<div class="col-md-4 col-md-offset-4">
 									<div class="desc">
 										<p>
-											Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there
-											live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a
-											large language ocean.
+											게시판을 이용한 소셜미디어서비스 페이지
 										</p>
 										<p class="read"><a href="project.html#project2">View Details</a></p>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="projectContent">
-							<div class="work-entry animate-box">
-								<a
-									href="project.html"
-									class="work-img"
-									style="background-image: url(images/work-3.jpg)"
-								>
-									<div class="display-t">
-										<div class="work-name">
-											<h2>Cristall</h2>
-										</div>
-									</div>
-								</a>
-								<div class="col-md-4 col-md-offset-4">
-									<div class="desc">
-										<p>
-											Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there
-											live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a
-											large language ocean.
-										</p>
-										<p class="read"><a href="project.html">View details</a></p>
 									</div>
 								</div>
 							</div>
