change the subject

--- a/project.html
+++ b/project.html
@@ -32,7 +32,7 @@
 					<!-- project 1 -->
 					<div id="project1" class="col-md-4 col-md-offset-4">
 						<div class="desc">
-							<h2>Angel</h2>
+							<h2>Toilet Finder</h2>
 						</div>
 					</div>
 					<div class="gallery style2 medium lightbox onscroll-fade-in">
@@ -189,7 +189,7 @@
 					<!-- project 2 -->
 					<div id="project2" class="col-md-4 col-md-offset-4">
 						<div class="desc">
-							<h2>Social networking service</h2>
+							<h2>Social Midea Service</h2>
 						</div>
 					</div>
 					<div class="gallery style2 medium lightbox onscroll-fade-in">
