--- a/index.html
+++ b/index.html
@@ -218,14 +218,14 @@
 								>
 									<div class="display-t">
 										<div class="work-name">
-											<h2>Social Midea Service</h2>
+											<h2>Social Network Service</h2>
 										</div>
 									</div>
 								</a>
 								<div class="col-md-4 col-md-offset-4">
 									<div class="desc">
 										<p>
-											게시판을 이용한 소셜미디어서비스 페이지
+											게시판을 이용한 SNS 페이지
 										</p>
 										<p class="read"><a href="project.html#project2">View Details</a></p>
 									</div>
