--- a/project.html
+++ b/project.html
@@ -189,7 +189,7 @@
 					<!-- project 2 -->
 					<div id="project2" class="col-md-4 col-md-offset-4">
 						<div class="desc">
-							<h2>Social Midea Service</h2>
+							<h2>Social Network Service</h2>
 						</div>
 					</div>
 					<div class="gallery style2 medium lightbox onscroll-fade-in">
@@ -340,7 +340,7 @@
 					</div>
 					<div class="col-md-4 col-md-offset-4">
 						<div class="desc">
-							<p>GPS를 이용해 현재 위치에서 가장 가까운 개방화장실을 찾아주는 서비스로서</p>
+							<p>게시판을 이용해 소통하는 SNS 페이지</p>
 						</div>
 					</div>
 				</div>
