--- a/about.html
+++ b/about.html
@@ -78,7 +78,7 @@
 				Reason	
 				</p>
 				<div class="inner">
-					<div class="story" style="margin-right:auto; margin-left:auto; padding-left: 15px; padding-right: 15px">\
+					<div class="story" style="margin-right:auto; margin-left:auto; padding-left: 15px; padding-right: 15px">
 						<div class="storyLeft">
 							<div class="skillContents">
 								<div class="storyIntro">
@@ -121,10 +121,8 @@
 				goal	
 				</p>
 				<div class="inner">
-					<div class="story" style="margin-right:auto; margin-left:auto; padding-left: 15px; padding-right: 15px">
-						<div class="goalLeft" style="background-image: url(images/skill.jpg);">
-						</div>
-						<div class="goalRight">
+					<div class="goal" style="margin-right:auto; margin-left:auto; padding-left: 15px; padding-right: 15px">
+						<div class="goalDown">
 							<div class="skillContents">
 								<div class="skillIntro">
 									<span>MY SERVICES</span>
@@ -132,41 +130,35 @@
 								</div>
 							</div>	
 							<div class="goalContents">
-								<div class="lists-01">
-									<div class="li-001">
+									<div class="li">
 										<h3>1 - 기술 성장과 업데이트</h3>
 										<p>
-											지속적인 학습과 새로운 기술 습득을<br>
+											지속적인 학습과 새로운 기술 습득을
 											통해 기술적 역량을 향상시키고,<br>
-											최신 동향을 파악하고 업데이트된 기술에 대한<br>
+											최신 동향을 파악하고 업데이트된 기술에 대한
 											이해를 갖추는 것을 목표로 합니다.
 										</p>
 									</div>
-									<div class="li-002">
-										<h3>3 - 프로젝트 리더십과 팀 협업</h3>
-										<p>
-											프로젝트에서 리더십 역할을 수행하고,<br>
-											팀원들과의 효과적인 협업을 통해 프로젝트<br>
-											일정과 품질을 관리하는 리더가 되는 것 입니다.<br>
-											프로젝트의 성공을 위해 팀의 조화로운 협업과<br>
-											리더십 능력을 발전시키는 것을 목표로 합니다.
-										</p>
-									</div>
-								</div>
-								<div class="lists-02">
-									<div class="li-001">
+									<div class="li">
 										<h3>2 - 사용자 중심의 개발과 품질 관리</h3>
 										<p>
 											사용자의 경험을 고려한 소프트웨어 개발을 목표로 합니다.<br>
-											사용자가 직관적이고 편리하게 사용할 수 있는 <br>
+											사용자가 직관적이고 편리하게 사용할 수 있는
 											소프트웨어를 제공하고,<br>
-											동시에 보안과 코드 품질 관리에 집중하여 안정적이고<br>
+											동시에 보안과 코드 품질 관리에 집중하여 안정적이고
 											품질 높은 소프트웨어를 개발하는 것을 목표로 합니다.
 										</p>
 									</div>
-									<div class="li-002">
+									<div class="li">
+										<h3>3 - 프로젝트 리더십과 팀 협업</h3>
+										<p>
+											프로젝트에서 리더십 역할을 수행하고,<br>
+											팀원들과의 효과적인 협업을 통해 프로젝트 일정과 품질을 관리하는 리더가 되는 것 입니다.<br>
+											프로젝트의 성공을 위해 팀의 조화로운 협업과
+											리더십 능력을 발전시키는 것을 목표로 합니다.
+										</p>
 									</div>
-								</div>
+
 							</div>
 						</div>
 					</div>
