--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 								<a
 									href="project.html#project1"
 									class="work-img"
-									style="background-image: url(images/gallery/fulls/pic01.jpg)"
+									style="background-image: url(images/angel/main.png)"
 								>
 									<div class="display-t">
 										<div class="work-name">
@@ -214,7 +214,7 @@
 								<a
 									href="project.html#project2"
 									class="work-img"
-									style="background-image: url(images/work-2.jpg)"
+									style="background-image: url(images/sns/post.png)"
 								>
 									<div class="display-t">
 										<div class="work-name">
