--- a/project.html
+++ b/project.html
@@ -32,149 +32,83 @@
 					<!-- project 1 -->
 					<div id="project1" class="col-md-4 col-md-offset-4">
 						<div class="desc">
-							<h2>Toilet Finder</h2>
+							<h2>Angel</h2>
 						</div>
 					</div>
 					<div class="gallery style2 medium lightbox onscroll-fade-in">
-						<article>
-							<a href="images/gallery/fulls/01.jpg" class="image">
-								<img src="images/gallery/thumbs/01.jpg" alt="" />
+						<article class="first-projet">
+							<a href="images/angel/main.png" class="image">
+								<img src="images/angel/main.png" alt="" />
 							</a>
 							<div class="caption">
-								<h3>Ipsum Dolor</h3>
-								<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+								<h3>Main Page</h3>
+								<p>
+									어플 앤젤의 메인 페이지<br>
+									어플을 실행하면 바로 내 현재 위치와 가장 가까운 개방 화장실이 거리와 함께 표시 된다.
+								</p>
 								<ul class="actions fixed">
 									<li><span class="button small">Details</span></li>
 								</ul>
 							</div>
 						</article>
-						<article>
-							<a href="images/gallery/fulls/02.jpg" class="image">
-								<img src="images/gallery/thumbs/02.jpg" alt="" />
+						
+						<article class="first-projet">
+							<a href="images/angel/sidebar.png" class="image">
+								<img src="images/angel/sidebar.png" alt="" />
 							</a>
 							<div class="caption">
-								<h3>Feugiat Lorem</h3>
-								<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+								<h3>side Menu</h3>
+								<p>
+									어플 앤젤의 사이드메뉴<br>
+									사이드 메뉴에는 어플의 각종 정보와 로그인을 할 수 있다.<br>
+									로그인을 하면 내가 추가한 개방 화장실에 대한 정보또한 확인 할 수 있다.
+								</p>
 								<ul class="actions fixed">
 									<li><span class="button small">Details</span></li>
 								</ul>
 							</div>
 						</article>
-						<article>
-							<a href="images/gallery/fulls/03.jpg" class="image">
-								<img src="images/gallery/thumbs/03.jpg" alt="" />
+						<article class="first-projet">
+							<a href="images/angel/login.png" class="image">
+								<img src="images/angel/login.png" alt="" />
 							</a>
 							<div class="caption">
-								<h3>Magna Amet</h3>
-								<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+								<h3>Login Page</h3>
+								<p>
+									어플 앤젤의 로그인 페이지<br>
+									어플에 로그인을 할 수 있으며 회원가입이 되어 있지 않다면 회원가입 또한 가능하다.
+								</p>
 								<ul class="actions fixed">
 									<li><span class="button small">Details</span></li>
 								</ul>
 							</div>
 						</article>
-						<article>
-							<a href="images/gallery/fulls/04.jpg" class="image">
-								<img src="images/gallery/thumbs/04.jpg" alt="" />
+						<article class="first-projet">
+							<a href="images/angel/add.png" class="image">
+								<img src="images/angel/add.png" alt="" />
 							</a>
 							<div class="caption">
-								<h3>Sed Tempus</h3>
-								<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+								<h3>Add Toliet</h3>
+								<p>
+									등록 되지 않은 새로운 개방 화장실을 발견했을 경우 로그인 후 화장실 추가가 가능하다.<br>
+									핀을 새로운 화장실의 위치에 놓으면 해당위치의 주소 및 등록된 건물 명이 표시된다.<br>
+									화장실에 대한 각종 정보또한 입력가능하다.
+								</p>
 								<ul class="actions fixed">
 									<li><span class="button small">Details</span></li>
 								</ul>
 							</div>
 						</article>
-						<article>
-							<a href="images/gallery/fulls/05.jpg" class="image">
-								<img src="images/gallery/thumbs/05.jpg" alt="" />
+						<article class="first-projet">
+							<a href="images/angel/list.png" class="image">
+								<img src="images/angel/list.png" alt="" />
 							</a>
 							<div class="caption">
-								<h3>Ultrices Magna</h3>
-								<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-								<ul class="actions fixed">
-									<li><span class="button small">Details</span></li>
-								</ul>
-							</div>
-						</article>
-						<article>
-							<a href="images/gallery/fulls/06.jpg" class="image">
-								<img src="images/gallery/thumbs/06.jpg" alt="" />
-							</a>
-							<div class="caption">
-								<h3>Sed Tempus</h3>
-								<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-								<ul class="actions fixed">
-									<li><span class="button small">Details</span></li>
-								</ul>
-							</div>
-						</article>
-						<article>
-							<a href="images/gallery/fulls/07.jpg" class="image">
-								<img src="images/gallery/thumbs/07.jpg" alt="" />
-							</a>
-							<div class="caption">
-								<h3>Ipsum Lorem</h3>
-								<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-								<ul class="actions fixed">
-									<li><span class="button small">Details</span></li>
-								</ul>
-							</div>
-						</article>
-						<article>
-							<a href="images/gallery/fulls/08.jpg" class="image">
-								<img src="images/gallery/thumbs/08.jpg" alt="" />
-							</a>
-							<div class="caption">
-								<h3>Magna Risus</h3>
-								<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-								<ul class="actions fixed">
-									<li><span class="button small">Details</span></li>
-								</ul>
-							</div>
-						</article>
-						<article>
-							<a href="images/gallery/fulls/09.jpg" class="image">
-								<img src="images/gallery/thumbs/09.jpg" alt="" />
-							</a>
-							<div class="caption">
-								<h3>Tempus Dolor</h3>
-								<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-								<ul class="actions fixed">
-									<li><span class="button small">Details</span></li>
-								</ul>
-							</div>
-						</article>
-						<article>
-							<a href="images/gallery/fulls/10.jpg" class="image">
-								<img src="images/gallery/thumbs/10.jpg" alt="" />
-							</a>
-							<div class="caption">
-								<h3>Sed Etiam</h3>
-								<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-								<ul class="actions fixed">
-									<li><span class="button small">Details</span></li>
-								</ul>
-							</div>
-						</article>
-						<article>
-							<a href="images/gallery/fulls/11.jpg" class="image">
-								<img src="images/gallery/thumbs/11.jpg" alt="" />
-							</a>
-							<div class="caption">
-								<h3>Magna Lorem</h3>
-								<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-								<ul class="actions fixed">
-									<li><span class="button small">Details</span></li>
-								</ul>
-							</div>
-						</article>
-						<article>
-							<a href="images/gallery/fulls/12.jpg" class="image">
-								<img src="images/gallery/thumbs/12.jpg" alt="" />
-							</a>
-							<div class="caption">
-								<h3>Ipsum Dolor</h3>
-								<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+								<h3>List page</h3>
+								<p>
+									등록되어 있는 모든 화장실의 정보가 거리순으로 표시된다.<br>
+									확인 하고 싶은 화장실이 있을 경우 해당 화장실명을 클릭시 지도가 해당 화장실의 위치로 이동한다.
+								</p>
 								<ul class="actions fixed">
 									<li><span class="button small">Details</span></li>
 								</ul>
@@ -183,7 +117,10 @@
 					</div>
 					<div class="col-md-4 col-md-offset-4">
 						<div class="desc">
-							<p>GPS를 이용해 현재 위치에서 가장 가까운 개방화장실을 찾아주는 서비스로서</p>
+							<p>
+								GPS를 이용해 현재 위치에서 가장 가까운 개방화장실을 찾아 네이버 지도API를 사용해 지도위에 표시해 주는 서비스로서<br>
+								AWS를 대여하여 Apach서버에 Lalavel 프레임워크를 사용하여 웹사이트를 만들고 Android sudio를 활용해 웹앱으로 제작하였다.
+							</p>
 						</div>
 					</div>
 					<!-- project 2 -->
@@ -194,149 +131,59 @@
 					</div>
 					<div class="gallery style2 medium lightbox onscroll-fade-in">
 						<article>
-							<a href="images/gallery/fulls/01.jpg" class="image">
-								<img src="images/gallery/thumbs/01.jpg" alt="" />
+							<a href="images/sns/login.png" class="image">
+								<img src="images/sns/login.png" alt="" />
 							</a>
 							<div class="caption">
-								<h3>Ipsum Dolor</h3>
-								<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+								<h3>Main Page</h3>
+								<p>
+									메인페이지로서 로그인과 회원이 아니라면 회원가입을 할 수있다.
+								</p>
 								<ul class="actions fixed">
 									<li><span class="button small">Details</span></li>
 								</ul>
 							</div>
 						</article>
 						<article>
-							<a href="images/gallery/fulls/02.jpg" class="image">
-								<img src="images/gallery/thumbs/02.jpg" alt="" />
+							<a href="images/sns/signup.png" class="image">
+								<img src="images/sns/signup.png" alt="" />
 							</a>
 							<div class="caption">
-								<h3>Feugiat Lorem</h3>
-								<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+								<h3>signup</h3>
+								<p>회원 가입페이지로서 처음 사용하는 유저를 위해 회원가입을 지원한다.</p>
 								<ul class="actions fixed">
 									<li><span class="button small">Details</span></li>
 								</ul>
 							</div>
 						</article>
 						<article>
-							<a href="images/gallery/fulls/03.jpg" class="image">
-								<img src="images/gallery/thumbs/03.jpg" alt="" />
+							<a href="images/sns/profile.png" class="image">
+								<img src="images/sns/profile.png" alt="" />
 							</a>
 							<div class="caption">
-								<h3>Magna Amet</h3>
-								<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+								<h3>Profile</h3>
+								<p>개인프로필 작성 페이지로서 본인에 대한 각종 정보를 입력 및 수정할 수 있다.</p>
 								<ul class="actions fixed">
 									<li><span class="button small">Details</span></li>
 								</ul>
 							</div>
 						</article>
 						<article>
-							<a href="images/gallery/fulls/04.jpg" class="image">
-								<img src="images/gallery/thumbs/04.jpg" alt="" />
+							<a href="images/sns/post.png" class="image">
+								<img src="images/sns/post.png" alt="" />
 							</a>
 							<div class="caption">
-								<h3>Sed Tempus</h3>
-								<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+								<h3>Bulletin Board</h3>
+								<p>
+									게시판 화면으로 목적에 맞는 게시판을 선택해 게시글 작성 및 작성된 게시글에 댓글을 달수 있다.<br>
+									게시글에는 글 뿐만아니라 동영상, 사진등을 업로드 할 수 있다.
+								</p>
 								<ul class="actions fixed">
 									<li><span class="button small">Details</span></li>
 								</ul>
 							</div>
 						</article>
-						<article>
-							<a href="images/gallery/fulls/05.jpg" class="image">
-								<img src="images/gallery/thumbs/05.jpg" alt="" />
-							</a>
-							<div class="caption">
-								<h3>Ultrices Magna</h3>
-								<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-								<ul class="actions fixed">
-									<li><span class="button small">Details</span></li>
-								</ul>
-							</div>
-						</article>
-						<article>
-							<a href="images/gallery/fulls/06.jpg" class="image">
-								<img src="images/gallery/thumbs/06.jpg" alt="" />
-							</a>
-							<div class="caption">
-								<h3>Sed Tempus</h3>
-								<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-								<ul class="actions fixed">
-									<li><span class="button small">Details</span></li>
-								</ul>
-							</div>
-						</article>
-						<article>
-							<a href="images/gallery/fulls/07.jpg" class="image">
-								<img src="images/gallery/thumbs/07.jpg" alt="" />
-							</a>
-							<div class="caption">
-								<h3>Ipsum Lorem</h3>
-								<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-								<ul class="actions fixed">
-									<li><span class="button small">Details</span></li>
-								</ul>
-							</div>
-						</article>
-						<article>
-							<a href="images/gallery/fulls/08.jpg" class="image">
-								<img src="images/gallery/thumbs/08.jpg" alt="" />
-							</a>
-							<div class="caption">
-								<h3>Magna Risus</h3>
-								<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-								<ul class="actions fixed">
-									<li><span class="button small">Details</span></li>
-								</ul>
-							</div>
-						</article>
-						<article>
-							<a href="images/gallery/fulls/09.jpg" class="image">
-								<img src="images/gallery/thumbs/09.jpg" alt="" />
-							</a>
-							<div class="caption">
-								<h3>Tempus Dolor</h3>
-								<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-								<ul class="actions fixed">
-									<li><span class="button small">Details</span></li>
-								</ul>
-							</div>
-						</article>
-						<article>
-							<a href="images/gallery/fulls/10.jpg" class="image">
-								<img src="images/gallery/thumbs/10.jpg" alt="" />
-							</a>
-							<div class="caption">
-								<h3>Sed Etiam</h3>
-								<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-								<ul class="actions fixed">
-									<li><span class="button small">Details</span></li>
-								</ul>
-							</div>
-						</article>
-						<article>
-							<a href="images/gallery/fulls/11.jpg" class="image">
-								<img src="images/gallery/thumbs/11.jpg" alt="" />
-							</a>
-							<div class="caption">
-								<h3>Magna Lorem</h3>
-								<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-								<ul class="actions fixed">
-									<li><span class="button small">Details</span></li>
-								</ul>
-							</div>
-						</article>
-						<article>
-							<a href="images/gallery/fulls/12.jpg" class="image">
-								<img src="images/gallery/thumbs/12.jpg" alt="" />
-							</a>
-							<div class="caption">
-								<h3>Ipsum Dolor</h3>
-								<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-								<ul class="actions fixed">
-									<li><span class="button small">Details</span></li>
-								</ul>
-							</div>
-						</article>
+
 					</div>
 					<div class="col-md-4 col-md-offset-4">
 						<div class="desc">
