--- a/project.html
+++ b/project.html
@@ -36,6 +36,7 @@
 						</div>
 					</div>
 					<div class="gallery style2 medium lightbox onscroll-fade-in">
+
 						<article class="first-projet">
 							<a href="images/angel/main.png" class="image">
 								<img src="images/angel/main.png" alt="" />
@@ -187,7 +188,10 @@
 					</div>
 					<div class="col-md-4 col-md-offset-4">
 						<div class="desc">
-							<p>게시판을 이용해 소통하는 SNS 페이지</p>
+							<p>
+								게시판을 이용해 소통하는 SNS 페이지<br>
+								Adobe xd를 활용해 UI디자인을 하고, Node.js 서버에 express 프레임워크를 사용하여 웹페이지를 제작하였습니다.
+							</p>
 						</div>
 					</div>
 				</div>
